# angas-app

./: README.md  curl.sh  docker-compose.yml  login.sh  patch_curl.sh  pyproject.toml  read_user.sh  task.md
backend/: depends.py  main.py
backend/database/: postgres.py
backend/models/: Employee.py  Shift.py  __init__.py  database.py  exceptions.py  shift_employe_link.py
backend/repository/: postgres_repo.py
backend/router/: central.py  employee.py  shift.py
backend/service/: base_service.py
backend/utils/: central_logging.py  security.py
frontend/: angular.json  package-lock.json  package.json  skills-lock.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
frontend/src/app/components/calendar/: calendar.html  calendar.scss  calendar.ts
frontend/src/app/components/employee-form/: employee-form.html  employee-form.scss  employee-form.ts
frontend/src/app/components/role-form/: role-form.html  role-form.scss  role-form.ts
frontend/src/app/components/shift-form/: shift-form.html  shift-form.scss  shift-form.ts
frontend/src/app/components/shift-menu/: shift-menu.html  shift-menu.scss  shift-menu.ts
frontend/src/app/models/: employee.model.ts  shift.model.ts
frontend/src/app/pages/planner/: planner.html  planner.scss  planner.ts
frontend/src/app/pages/team/: team.html  team.scss  team.ts
frontend/src/app/services/: employee.service.ts  shift.service.ts
frontend/src/environments/: environment.ts
