[project]
name = "lofi-coding"
version = "0.1.0"
description = "Test Repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt<4.0.0",
    "fastapi>=0.136.3",
    "fastapi-trace-middleware>=1.0.3",
    "greenlet>=3.0.0",
    "opentelemetry-api>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-json-logger>=4.1.0",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.49.0",
]
